--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -13,20 +13,18 @@ debug = 0
 # now you need to get a bot token.
 # https://discordapp.com/developers/docs/topics/oauth2
 # https://discordapp.com/developers/applications/me#top
-login_token = abc123
+login_token = OTM1Njg5NDM3ODEwMTYzNzIy.YfCSsg._61gHwdL52_0QCBJWDGjePzyy4k
 
 # You can just leave this alone, unless you might try to run from other than current directory:
 db_path = feed2discord.db
-#gameplayed = discord_rss_bot
+gameplayed = discord_rss_bot
 
 # Log in as your bot account, accept any required invites, get all the roles you need, etc...
 # The the last bit of the link is the id needed.
 # The name here is purely internal to the bot, and doesn't need to match.
 
 [CHANNELS]
-one = MAGIC CHANNEL ID HERE
-two = ANOTHER MAGIC ID
-testing = 81402706320699392
+one = 935562580435533884
 
 [DEFAULT]
 # time between refreshes of a feed
