--- a/feed2discord.ini
+++ b/feed2discord.ini
@@ -36,9 +36,9 @@ max_age = 86400
 # This is a fairly typical Drupal RSS feed:
 [ednews]
 # channel ids from [CHANNELS], separated by commas
-channels = two
+channels = one
 # The RSS or Atom feed URL:
-feed_url = https://community.elitedangerous.com/taxonomy/term/6/feed
+feed_url = https://status.secondlifegrid.net/history.atom
 # fields, separated by commas
 # Special handling:
 # - a field in "quotes" just returns the bit inside the quotes instead of the actual field
@@ -54,19 +54,19 @@ fields = link,**title**,_published_,description
 
 # Despite the name, this is an atom feed.
 # I'm not sure if the date thing they do is unusual for Atom feeds or not:
-[discordreddit]
-channels = testing
-feed_url = https://www.reddit.com/r/discordapp/new/.rss
+#[discordreddit]
+#channels = testing
+#feed_url = https://www.reddit.com/r/discordapp/new/.rss
 # discord formats reddit links pretty nicely already...
-fields = link
+#fields = link
 # busy, so only look at last hour's posts:
-max_age = 3600
+#max_age = 3600
 
 # Galnet doesn't have URLs in the feed, but they can be calculated. Unusual:
-[galnet]
-channels = one,two
-feed_url = https://community.elitedangerous.com/galnet-rss
+#[galnet]
+#channels = one,two
+#feed_url = https://community.elitedangerous.com/galnet-rss
 # if you set item_url_base, then when the guid field is encountered, it gets the item_url_base stuck to the start.
 # If you need a guid-based URL *and* a guid, do something like: guid,*guid*
-item_url_base = https://community.elitedangerous.com/galnet/uid/
-fields = "@everyone",guid,**title**,_published_,description
+#item_url_base = https://community.elitedangerous.com/galnet/uid/
+#fields = "@everyone",guid,**title**,_published_,description
